working on mistakes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="galery clearfix">
         <div class="image1">
             <a href="#">
-                <img src="MHShopingTours.jpg" alt="Shoping Tours" class="gradient">
+                <img src=img/MHShopingTours.jpg alt="Shoping Tours" class="gradient">
                 <div class="blockup">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="image2">
-            <a href="#"><img src="MHSightseeingTours.jpg" alt="Sightseeing Tours" class="gradient">
+            <a href="#"><img src=img/MHSightseeingTours.jpg alt="Sightseeing Tours" class="gradient">
                 <div class="blockup">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="image3">
-            <a href="#"><img src="MHFoodTours.jpg " alt="Food Tours " class="gradient">
+            <a href="#"><img src=img/MHFoodTours.jpg alt="Food Tours " class="gradient">
                 <div class="blockup">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="image4">
-            <a href="#"><img src="MHBars & Nightlife.jpg " alt="MHBars & Nightlife " class="gradient">
+            <a href="#"><img src=img/MHBars&Nightlife.jpg alt="MHBars & Nightlife " class="gradient">
                 <div class="blockup2">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
@@ -97,7 +97,7 @@
             </a></div>
         </div>
         <div class="image5">
-            <a href="#"><img src="MHArt&Architecture.jpg " alt="Art & Architecture " class="gradient">
+            <a href="#"><img src=img/MHArt&Architecture.jpg alt="Art & Architecture " class="gradient">
                 <div class="blockup2">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="image6">
-            <a href="#"><img src="MHWalkingTours.jpg " alt="MHWalking Tours " class="gradient">
+            <a href="#"><img src=img/MHWalkingTours.jpg alt="MHWalking Tours " class="gradient">
                 <div class="blockup2">
                     <span class="from"> from </span>
                     <span class="euro">€50 </span>
